...
            android:layout_toEndOf="@+id/add_picture_button" android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" android:clickable="true"
            android:onClick="onClickAddPicture"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username" android:layout_alignBottom="@+id/add_picture_button"
            android:layout_toEndOf="@+id/add_picture_button"
            android:layout_marginBottom="30dp" android:inputType="text"
            android:layout_alignParentEnd="true" android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/status_message_profile_activity" android:layout_below="@+id/add_picture_button"
            android:layout_marginTop="32dp" android:layout_alignParentStart="true"
            android:inputType="textShortMessage" android:layout_alignEnd="@+id/username"
            android:hint="@string/status_message_placeholder"/>
</RelativeLayout>

